feat: method put and delete for discussions and comments
