# CC/src/server/routes.js
@@ -7,6 +7,12 @@ const router = express.Router();
 
 const upload = multer();
 
+// Auth
+router.post('/signup', handlers.signUp);
+router.post('/signin', handlers.signIn);
+router.post('/logout', handlers.logOut);
+router.post('/reset-password', handlers.resetPassword);
+
 // Predict
 router.post('/predict', upload.single('image'), handlers.postPredict);
 router.get('/predict/histories', handlers.getPredictHistories);
@@ -15,17 +21,15 @@ router.get('/predict/histories', handlers.getPredictHistories);
 router.post('/discussions', verifyToken, handlers.createDiscussion);
 router.get('/discussions', handlers.getAllDiscussions);
 
-router.get('/discussions/:id', handlers.getDiscussion);
+router.get('/discussions/:discussionId', handlers.getDiscussion);
+router.put('/discussions/edit/:discussionId', verifyToken, handlers.editDiscussion);
+router.delete('/discussions/:discussionId', verifyToken, handlers.deleteDiscussion);
 
 
 // Comment
-router.post('/discussions/:id/comments', verifyToken, handlers.createComment);
-router.get('/discussions/:id/comments', handlers.getComments);
+router.post('/discussions/:discussionId/comments', verifyToken, handlers.createComment);
+router.get('/discussions/:discussionId/comments', handlers.getComments);
+router.delete('/discussions/:discussionId/comments/:commentId', verifyToken, handlers.deleteComment);
 
-// Auth
-router.post('/signup', handlers.signUp);
-router.post('/signin', handlers.signIn);
-router.post('/logout', handlers.logOut);
-router.post('/reset-password', handlers.resetPassword);
 
 module.exports = router;
